--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <section id="opening">
     <div class="undangan">
-        <div class="overlay">
+        <div class="overlay">gg
           <h1>Hezron & Caroline</h1>
           <p>Hai</p>
           <h3>Fulan</h3>
