--- a/index.html
+++ b/index.html
@@ -37,28 +37,23 @@
               <h1>Hezron & Caroline</h1>
               <p>Hai</p>
               <h3>Fulan</h3>
-              <button>Open Invitation</button>
             </div>
           </div>
           <div class="falling-leaves3"></div>
       <div class="falling-leaves4"></div>          
     </div>
-    <!-- <section id="hero" class="hero justify-content-center align-items-center">
-        <main>
-            <p>Wedding Invitation</p>
-            <h1>Hezron & Caroline</h1>
-            <p>25 Januari 2025</p>
-            <a href="#rsvp" class="rsvp_btn">RSVP</a>
-            <img src="img/image.png" alt="image">
-        </main>
-    </section> -->
+    
     <div class="right-section">
         <div class="container1">
+            <div class="animasi-awan">
+                <img src="image/awan2.png" alt="awan2" class="awan">
+                <img src="image/awan1.png" alt="awan1" class="awan">
+            </div>
             <div class="invitation-content">
                 <h2>Wedding Invitation</h2>
                 <h1>Hezron & Caroline</h1>
                 <p class="date">25 Januari 2025</p>
-                <button class="rsvp-button">RSVP</button>
+                <button class="rsvp-button"><a href="#rsvp">RSVP</a></button>
                 <div class="image-arch">
                     <img src="image/prewed.svg" alt="Foto Hezron dan Caroline" class="main-photo">
                 </div>
