Perubahan Format Nama

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hezron & Caroline Wedding</title>
+    <title>Caroline & Hezron Wedding</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
     <section id="opening">
     <div class="undangan">
         <div class="overlay">
-          <h1>Hezron & Caroline</h1>
+          <h1>Caroline & Hezron</h1>
           <p>Hai</p>
           <h3>Fulan</h3>
           <button class="button" id="openInvitationBtn">Open Invitation <i class="fas fa-envelope"></i></button>
@@ -34,7 +34,7 @@
     <div class="left-section">
         <div class="invitation">
             <div class="overlay">
-              <h1>Hezron & Caroline</h1>
+              <h1>Caroline & Hezron</h1>
               <p>Hai</p>
               <h3>Fulan</h3>
             </div>
@@ -51,7 +51,7 @@
             </div>
             <div class="invitation-content">
                 <h2>Wedding Invitation</h2>
-                <h1>Hezron & Caroline</h1>
+                <h1>Caroline & Hezron</h1>
                 <p class="date">25 Januari 2025</p>
                 <button class="rsvp-button"><a href="#rsvp">RSVP</a></button>
                 <div class="image-arch">
@@ -368,7 +368,7 @@
                 </div>
                 <div class="details">
                     <h2>Wedding Invitation</h2>
-                    <h3>Hezron & Caroline</h3>
+                    <h3>Caroline & Hezron</h3>
                     <p>25 Januari 2025</p>
                 </div>
             </section>
