tambah awan dan responsive
tambah awan dan responsive

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <div class="animasi-awan">
                 <img src="image/awan2.png" alt="awan2" class="awan">
                 <img src="image/awan1.png" alt="awan1" class="awan">
+                <img src="image/awan1.png" alt="awan3" class="awan">
             </div>
             <div class="invitation-content">
                 <h2>Wedding Invitation</h2>
