--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             </div>
             <div class="portraits-section">
-                <h1>Portraits of Us</h1>
+                <h1>Potraits of Us</h1>
                 <div class="portraits-gallery">
                     <div class="portrait-row">
                         <div class="portrait-item">
